# garmin-analytics

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  IMPROVEMENT_PLAN.md  Makefile  README.md  SECURITY.md  backfill.ps1  backfill.sh  docker-compose.yml  reset.ps1  reset.sh  setup.ps1  setup.sh  start.ps1  start.sh  sync.ps1  sync.sh  update.sh
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  cli.py  config.py  logging.py  main.py  ratelimit.py
backend/app/ai/: __init__.py  coach.py  metric_insight.py  morning_brief.py
backend/app/analytics/: briefing.py  engine.py  fitness.py  goal_plan.py  insight_engine.py  metric_insights.py  pace_coach.py  physiology.py  readiness.py  session.py  sleep_coach.py
backend/app/api/routes/: auth.py  briefing.py  chat.py  coach.py  core.py  performance.py
backend/app/collectors/: base.py  endpoints.py  garmin_connect.py  sync.py  weather.py
backend/app/db/: backup.py  chat.py  engine.py
backend/app/db/models/: chat.py  core.py  insights.py  weather.py
backend/app/normalize/: body_battery.py  mappers.py  personal_records.py  weather.py
backend/app/notify/: __init__.py  message.py  telegram.py
backend/tests/unit/: test_auth.py  test_coach.py  test_goal_plan.py  test_infra.py  test_insight_engine.py  test_m10_watch.py  test_m1_foundation.py  test_m2_collector.py  test_m3_m6_pipeline.py  test_m7_coach.py  test_m8_performance.py  test_m9_briefing.py  test_metric_ai_insight.py  test_morning_brief.py  test_notify.py  test_onboarding.py  test_static_security.py
(+50 files in other folders)
